--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+	<title>Noel Killebrew</title>
+	<meta name="description" content="Noel Killebrew Front-End Web Developer">
+
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css" >
+	<link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="css/styles.css">
+	
+	<script src="js/jquery.min.js"></script>
+ 	<script src="js/bootstrap.min.js"></script>
+
+</head>
+
+<body>
+	<div class="container-fluid">
+		<div class="container">
+			<h1>Hi, I'm Noel Killebrew, Front-End Web Developer</h1>
+			<p>With my background in design, and experience with development, I code websites that are both functional and elegant.</p>
+		</div>
+	</div>
+
+	
+</body>
+</html>
