updated CL link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<div class="portfolio col-md-6">
 			<div class="col-md-4">
-				<a href="http://stage.mediaroom.com/century_link/" target="_black">
+				<a href="http://news.centurylink.com/" target="_black">
 					<div class="linkbox century">
 					</div>
 				</a>
