--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="left-block">
 					<h1>Hi, I'm Noel Killebrew <br>
 					Front-End Web Developer</h1>
-					<p>With my background in design, and experience with development, I code websites that are both functional and elegant.</p>
+					<p>I code websites that are both functional and elegant.</p>
 				</div>
 			</div>
 		</section>
