--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@
 					</div>
 				</a>
 			</div>
+			<div class="col-md-4">
+				<a href="http://news.lifetime.life/" target="_black">
+					<div class="linkbox lifetime">
+					</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://news.gallagherbassett.com/" target="_black">
+					<div class="linkbox GB">
+					
+					</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="http://investors.lxrco.com/" target="_black">
+					<div class="linkbox lxr">
+					
+					</div>
+				</a>
+			</div>
 		</div>
 
 		<footer>
