--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			<div class="content-body">
 				<div class="left-block">
 					<h1>Hi, I'm Noel Killebrew <br>
-					Web Designer + Front-End Web Developer</h1>
+					Website Designer + <br>
+					Front-End Web Developer</h1>
 					<p>All of the adjacent sites are projects I have worked on as a designer, developer, or both. Click on the thumbnails for a closer look.</p>
 				</div>
 			</div>
