--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
 	<title>Noel Killebrew</title>
 	<meta name="description" content="Noel Killebrew Web Designer and Developer">
+	
+	<link rel="shortcut icon" href="images/favicon.jpg">
 
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/bootstrap.css" >
