--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Noel Killebrew</title>
 	<meta name="description" content="Noel Killebrew Web Designer and Developer">
 	
-	<link rel="shortcut icon" href="images/favicon.jpg">
+	<link rel="shortcut icon" href="images/favicon.png">
 
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/bootstrap.css" >
