Laying out new updated pages

--- a/update/index.html
+++ b/update/index.html
@@ -26,16 +26,37 @@
 		</header>
 
 		<section>
-			<div class="col-md-4 bubble">
+			<h2>Featured Work</h2>
+			<p>This was a unique opportunity to capture business. The client was using a competitor's services because they believed that while our company offered a better product, we were only able to provide antiquated design. Since this was not a current, paying client, this was not a design project that could be incorporated into the design team's workflow. I got the opportunity to sketch up and build out this design for the sales team to present in hopes of winning the business. It worked, the client was captivated and made the switch right away.</p>
 
-				This was a unique opportunity to capture business.
+			<p>My favorite part of this process was taking the client's diagonal design element which only existed as a part of flat images, and bringing it to life with CSS. Rather than having the slash only as a part of the banner display, making the mobile experience inferior, I was able to use a CSS diagonal that changed direction from horizontal to vertical for mobile display.</p>
 
+			<button>View Live Site</button>
+		</section>
+
+		<section>
+			<div class="col-md-4">
+				<div class="buble">
+					<div class="module lifetime">
+					</div>
+				</div>
+				<p>DEVELOPMENT</p>
 			</div>
 
-			<div class="col-md-4 bubble">
+			<div class="col-md-4">
+				<div class="buble">
+					<div class="module ei">
+					</div>
+				</div>
+				<p>DESIGN + DEV</p>
 			</div>
 
-			<div class="col-md-4 bubble">
+			<div class="col-md-4">
+				<div class="buble">
+					<div class="module legacy">
+					</div>
+				</div>
+				<p>DEVELOPMENT</p>
 			</div>
 		</section>
 
@@ -44,7 +65,14 @@
 		</section>
 
 		<footer>
-
+			<div class="social-wrapper">
+				<ul class="social-tabs" role="tablist">
+				    <a href="https://github.com/noelietrex" target="_blank"><li class="social-tab github" title="Github" role="tab" ></li></a>  
+				    <a href="https://codepen.io/noelietrex/" target="_blank"><li class="social-tab codepin" title="Codepin" role="tab" ></li></a>
+				    <a href="https://twitter.com/noelieTREX" target="_blank"><li class="social-tab twitter" title="Twitter" role="tab" ></li></a>
+				    <a href="http://noelietrex.tumblr.com/" target="_blank"><li class="social-tab tumblr" title="Tumblr" role="tab" ></li></a>
+				</ul>     
+			</div>
 		</footer>
 	</div>
 </body>
