--- a/update/index.html
+++ b/update/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-	<title>Noel Killebrew</title>
-	<meta name="description" content="Noel Killebrew Web Designer and Developer">
+	<title>Noel Killebrew Design + Dev</title>
+	<meta name="description" content="Hi, I'm Noel Killebrew, a designer and developer based in Denver, Colorado. With a background in design and years of experience in front-end web development, I have a passion for the space where functional meets elegant.">
 	
 	<link rel="shortcut icon" href="images/favicon.png">
 
