--- a/update/index.html
+++ b/update/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-	<title>Noel Killebrew Design + Dev</title>
+	<title>Noel Killebrew Design + Development</title>
 	<meta name="description" content="Hi, I'm Noel Killebrew, a designer and developer based in Denver, Colorado. With a background in design and years of experience in front-end web development, I have a passion for the space where functional meets elegant.">
 	
 	<link rel="shortcut icon" href="images/favicon.png">
@@ -22,6 +22,10 @@
 		<header>
 			<div class="banner">
 				
+			</div>
+			<div class="subbanner">
+				<h1>Hi, I'm Noel Killebrew <br>
+					I specialize in Website Design + Front-End Web Development</h1>
 			</div>
 		</header>
 
