--- a/update/index.html
+++ b/update/index.html
@@ -23,9 +23,11 @@
 			<div class="banner">
 				
 			</div>
-			<div class="subbanner">
-				<h1>Hi, I'm Noel Killebrew <br>
-					I specialize in Website Design + Front-End Web Development</h1>
+			<div class="subbanner black">
+				<div class="container">
+					<h1>Hi, I'm Noel Killebrew <br>
+						I specialize in Website Design + Front-End Web Development</h1>
+				</div>
 			</div>
 		</header>
 
@@ -38,29 +40,31 @@
 			<button>View Live Site</button>
 		</section>
 
-		<section>
-			<div class="col-md-4">
-				<div class="buble">
-					<div class="module lifetime">
+		<section class="black">
+			<div class="container">
+				<div class="col-md-4">
+					<div class="buble">
+						<div class="module lifetime">
+						</div>
 					</div>
+					<p>DEVELOPMENT</p>
 				</div>
-				<p>DEVELOPMENT</p>
-			</div>
 
-			<div class="col-md-4">
-				<div class="buble">
-					<div class="module ei">
+				<div class="col-md-4">
+					<div class="buble">
+						<div class="module ei">
+						</div>
 					</div>
+					<p>DESIGN + DEV</p>
 				</div>
-				<p>DESIGN + DEV</p>
-			</div>
 
-			<div class="col-md-4">
-				<div class="buble">
-					<div class="module legacy">
+				<div class="col-md-4">
+					<div class="buble">
+						<div class="module legacy">
+						</div>
 					</div>
+					<p>DEVELOPMENT</p>
 				</div>
-				<p>DEVELOPMENT</p>
 			</div>
 		</section>
 
@@ -69,13 +73,15 @@
 		</section>
 
 		<footer>
-			<div class="social-wrapper">
-				<ul class="social-tabs" role="tablist">
-				    <a href="https://github.com/noelietrex" target="_blank"><li class="social-tab github" title="Github" role="tab" ></li></a>  
-				    <a href="https://codepen.io/noelietrex/" target="_blank"><li class="social-tab codepin" title="Codepin" role="tab" ></li></a>
-				    <a href="https://twitter.com/noelieTREX" target="_blank"><li class="social-tab twitter" title="Twitter" role="tab" ></li></a>
-				    <a href="http://noelietrex.tumblr.com/" target="_blank"><li class="social-tab tumblr" title="Tumblr" role="tab" ></li></a>
-				</ul>     
+			<div class="container">
+				<div class="social-wrapper">
+					<ul class="social-tabs" role="tablist">
+					    <a href="https://github.com/noelietrex" target="_blank"><li class="social-tab github" title="Github" role="tab" ></li></a>  
+					    <a href="https://codepen.io/noelietrex/" target="_blank"><li class="social-tab codepin" title="Codepin" role="tab" ></li></a>
+					    <a href="https://twitter.com/noelieTREX" target="_blank"><li class="social-tab twitter" title="Twitter" role="tab" ></li></a>
+					    <a href="http://noelietrex.tumblr.com/" target="_blank"><li class="social-tab tumblr" title="Tumblr" role="tab" ></li></a>
+					</ul>     
+				</div>
 			</div>
 		</footer>
 	</div>
