--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Noel Killebrew Design + Dev</title>
 	<meta name="description" content="Hi, I'm Noel Killebrew, a designer and developer based in Denver, Colorado. With a background in design and years of experience in front-end web development, I have a passion for the space where functional meets elegant.">
 	
-	<link rel="shortcut icon" href="images/favicon.png">
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/bootstrap.css" >
