--- a/update/index.html
+++ b/update/index.html
@@ -32,12 +32,18 @@
 		</header>
 
 		<section>
-			<h2>Featured Work</h2>
-			<p>This was a unique opportunity to capture business. The client was using a competitor's services because they believed that while our company offered a better product, we were only able to provide antiquated design. Since this was not a current, paying client, this was not a design project that could be incorporated into the design team's workflow. I got the opportunity to sketch up and build out this design for the sales team to present in hopes of winning the business. It worked, the client was captivated and made the switch right away.</p>
+			<div class="container">
+				<h2>Featured Work</h2>
+				<p>This was a unique opportunity to capture business. The client was using a competitor's services because they believed that while our company offered a better product, we were only able to provide antiquated design. Since this was not a current, paying client, this was not a design project that could be incorporated into the design team's workflow. I got the opportunity to sketch up and build out this design for the sales team to present in hopes of winning the business. It worked, the client was captivated and made the switch right away.</p>
 
-			<p>My favorite part of this process was taking the client's diagonal design element which only existed as a part of flat images, and bringing it to life with CSS. Rather than having the slash only as a part of the banner display, making the mobile experience inferior, I was able to use a CSS diagonal that changed direction from horizontal to vertical for mobile display.</p>
+				<p>My favorite part of this process was taking the client's diagonal design element which only existed as a part of flat images, and bringing it to life with CSS. Rather than having the slash only as a part of the banner display, making the mobile experience inferior, I was able to use a CSS diagonal that changed direction from horizontal to vertical for mobile display.</p>
+			</div>
 
-			<button>View Live Site</button>
+			
+			<div class="banner">
+				<button><a href="http://news.centurylink.com/">View Live Site</a></button>
+			</div>
+
 		</section>
 
 		<section class="black">
