middle banne updates

--- a/update/index.html
+++ b/update/index.html
@@ -40,8 +40,9 @@
 			</div>
 
 			
-			<div class="banner">
+			<div class="banner-middle">
 				<button><a href="http://news.centurylink.com/">View Live Site</a></button>
+				<img src="images/banner-middle.jpg" alt="design and development for CenturyLink">
 			</div>
 
 		</section>
