--- a/update/index.html
+++ b/update/index.html
@@ -12,8 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
 	
-	<script src="js/jquery.min.js"></script>
- 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+ 	<script src="js/bootstrap.js"></script>
 
 </head>
 
