--- a/update/index.html
+++ b/update/index.html
@@ -41,7 +41,7 @@
 
 			
 			<div class="banner-middle">
-				<button><a href="http://news.centurylink.com/">View Live Site</a></button>
+				<button><a href="http://news.centurylink.com/" target="_blank">View Live Site</a></button>
 				<img src="images/banner-middle.jpg" alt="design and development for CenturyLink">
 			</div>
 
