--- a/update/index.html
+++ b/update/index.html
@@ -47,10 +47,10 @@
 
 		</section>
 
-		<section class="black">
+		<section class="black portfolio">
 			<div class="container">
 				<div class="col-md-4">
-					<div class="buble">
+					<div class="bubble">
 						<div class="module lifetime">
 						</div>
 					</div>
@@ -58,7 +58,7 @@
 				</div>
 
 				<div class="col-md-4">
-					<div class="buble">
+					<div class="bubble">
 						<div class="module ei">
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 				</div>
 
 				<div class="col-md-4">
-					<div class="buble">
+					<div class="bubble">
 						<div class="module legacy">
 						</div>
 					</div>
