--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-	<title>Noel Killebrew Design + Dev</title>
+	<title>Noel Killebrew Design + Development</title>
 	<meta name="description" content="Hi, I'm Noel Killebrew, a designer and developer based in Denver, Colorado. With a background in design and years of experience in front-end web development, I have a passion for the space where functional meets elegant.">
 	
 	<link rel="shortcut icon" href="images/favicon.ico">
@@ -12,8 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Abel|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
 	
-	<script src="js/jquery.min.js"></script>
- 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+ 	<script src="js/bootstrap.js"></script>
 
 </head>
 
@@ -24,9 +24,9 @@
 			<div class="content-body">
 				<div class="left-block">
 					<h1>Hi, I'm Noel Killebrew <br>
-					Website Designer + <br>
-					Front-End Web Developer</h1>
-					<p>All of the adjacent sites are projects I have worked on as a designer, developer, or both. Click on the thumbnails for a closer look.</p>
+					I specialize in Website Design + Front-End Web Development</h1>
+
+					<p>All of the adjacent sites are projects for which I've been the lead front-end developer. A few of these are also my designs. These are a brief glimpse into my work. I would be happy to discuss my role in each more at length or send over a more comprehensive list of work upon request.</p>
 				</div>
 			</div>
 		</section>
@@ -68,8 +68,8 @@
 				<p> DEVELOPMENT </p>
 			</div>
 			<div class="col-md-4">
-				<a href="http://investors.lxrco.com/" target="_black">
-					<div class="linkbox lxr">
+				<a href="https://newsroom.expedia.com/" target="_black">
+					<div class="linkbox expedia">
 					</div>
 				</a>
 				<p> DEVELOPMENT </p>
