--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h1>Hi, I'm Noel Killebrew <br>
 					I specialize in Website Design + Front-End Web Development</h1>
 
-					<p>All of the adjacent sites are projects for which I've been the lead front-end developer. A few of these are also my designs. These are a brief glimpse into my work. I would be happy to discuss my role in each more at length or send over a more comprehensive list of work upon request.</p>
+					<p>All of the adjacent sites are projects for which I've been the lead front-end developer. A few of these are also my designs. These are a brief glimpse into my work. I would be happy to discuss what I brought to the table for each of these clients more at length or provide a more comprehensive project list upon request.</p>
 				</div>
 			</div>
 		</section>
