--- a/update/index.html
+++ b/update/index.html
@@ -20,10 +20,7 @@
 <body>
 	<div class="main">
 		<header>
-			<div class="banner">
-				
-			</div>
-			<div class="subbanner black">
+			<div class="topbanner black">
 				<div class="container">
 					<h1>Hi, I'm Noel Killebrew <br>
 						I specialize in Website Design + Front-End Web Development</h1>
@@ -31,30 +28,42 @@
 			</div>
 		</header>
 
-		<section>
-			<div class="container">
-				<h2>Featured Work</h2>
-				<p>This was a unique opportunity to capture business. The client was using a competitor's services because they believed that while our company offered a better product, we were only able to provide antiquated design. Since this was not a current, paying client, this was not a design project that could be incorporated into the design team's workflow. I had the opportunity to sketch up and build out this design for the sales team to present in hopes of winning the business. It worked, the client was captivated and made the switch right away.</p>
-
-				<p>My favorite part of this process was the client's diagonal design element. On their website it only exists as part of the flat, banner images. I was able to bring it to life and make it responsive using CSS. My CSS diagonal changes direction from horizontal to vertical for mobile display.</p>
-			</div>
-
-			
-			<div class="banner-middle">
-				<button><a href="http://news.centurylink.com/" target="_blank">View Live Site</a></button>
-				<img src="images/banner-middle.jpg" alt="design and development for CenturyLink">
-			</div>
-
-		</section>
-
 		<section class="black portfolio">
 			<div class="container">
+				
 				<div class="col-md-4">
 					<div class="bubble">
 						<div class="module lifetime">
 						</div>
 					</div>
-					<p>DEVELOPMENT</p>
+				</div>
+
+				<div class="col-md-4">
+					<div class="bubble">
+						<div class="module expedia">
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="bubble">
+						<div class="module achieve">
+						</div>
+					</div>
+				</div>
+			
+				<div class="col-md-4">
+					<div class="bubble">
+						<div class="module legacy">
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="bubble">
+						<div class="module ashville">
+						</div>
+					</div>
 				</div>
 
 				<div class="col-md-4">
@@ -62,15 +71,20 @@
 						<div class="module ei">
 						</div>
 					</div>
-					<p>DESIGN + DEV</p>
 				</div>
 
-				<div class="col-md-4">
-					<div class="bubble">
-						<div class="module legacy">
-						</div>
-					</div>
-					<p>DEVELOPMENT</p>
+			</div>
+		</section>
+
+		<section>
+			<div class="featured-content">
+				<div class="container">
+					<h2>Featured Work</h2>
+					<p>This was a unique opportunity to capture business. The client was using a competitor's services because they believed that while our company offered a better product, we were only able to provide antiquated design. Since this was not a current, paying client, this was not a design project that could be incorporated into the design team's workflow. I had the opportunity to sketch up and build out this design for the sales team to present in hopes of winning the business. It worked, the client was captivated and made the switch right away.</p>
+
+					<p>My favorite part of this process was the client's diagonal design element. On their website it only exists as part of the flat, banner images. I was able to bring it to life and make it responsive using CSS. My CSS diagonal changes direction from horizontal to vertical for mobile display.</p>
+
+					<button><a href="http://news.centurylink.com/" target="_blank">View Live Site</a></button>
 				</div>
 			</div>
 		</section>
