--- a/update/index.html
+++ b/update/index.html
@@ -33,6 +33,7 @@
 				
 				<div class="col-md-4">
 					<div class="bubble">
+						<p>DEVELOPMENT</p>
 						<div class="module lifetime">
 						</div>
 					</div>
@@ -40,6 +41,7 @@
 
 				<div class="col-md-4">
 					<div class="bubble">
+						<p>DEVELOPMENT</p>
 						<div class="module expedia">
 						</div>
 					</div>
@@ -47,6 +49,7 @@
 
 				<div class="col-md-4">
 					<div class="bubble">
+						<p>DEVELOPMENT</p>
 						<div class="module achieve">
 						</div>
 					</div>
@@ -54,6 +57,7 @@
 			
 				<div class="col-md-4">
 					<div class="bubble">
+						<p>DEVELOPMENT</p>
 						<div class="module legacy">
 						</div>
 					</div>
@@ -61,6 +65,7 @@
 
 				<div class="col-md-4">
 					<div class="bubble">
+						<p>DEVELOPMENT</p>
 						<div class="module ashville">
 						</div>
 					</div>
@@ -68,6 +73,7 @@
 
 				<div class="col-md-4">
 					<div class="bubble">
+						<p>DESIGN + <br> DEVELOPMENT</p>
 						<div class="module ei">
 						</div>
 					</div>
