--- a/update/index.html
+++ b/update/index.html
@@ -72,10 +72,12 @@
 				</div>
 
 				<div class="col-md-4">
-					<div class="bubble">
+					<div class="bubble both">
 						<p>DESIGN + <br> DEVELOPMENT</p>
-						<div class="module ei">
-						</div>
+						<a href="#">
+							<div class="module ei">
+							</div>
+						</a>
 					</div>
 				</div>
 
