--- a/index.html
+++ b/index.html
@@ -33,63 +33,63 @@
 
 		<div class="portfolio col-md-6">
 			<div class="col-md-4">
-				<a href="http://news.centurylink.com/" target="_black">
+				<a href="http://news.centurylink.com/" target="_blank">
 					<div class="linkbox century">
 					</div>
 				</a>
 				<p> DESIGN + DEV </p>
 			</div>
 			<div class="col-md-4">
-				<a href="http://enviroinvestigators.com/" target="_black">
+				<a href="http://enviroinvestigators.com/" target="_blank">
 					<div class="linkbox ei">
 					</div>
 				</a>
 				<p> DESIGN + DEV </p>
 			</div>
 			<div class="col-md-4">
-				<a href="http://ir.achievelifesciences.com/" target="_black">
+				<a href="http://ir.achievelifesciences.com/" target="_blank">
 					<div class="linkbox achieve">
 					</div>
 				</a>
 				<p> DEVELOPMENT </p>
 			</div>
 			<div class="col-md-4">
-				<a href="http://news.lifetime.life/" target="_black">
+				<a href="http://news.lifetime.life/" target="_blank">
 					<div class="linkbox lifetime">
 					</div>
 				</a>
 				<p> DEVELOPMENT </p>
 			</div>
 			<div class="col-md-4">
-				<a href="http://news.gallagherbassett.com/" target="_black">
+				<a href="http://news.gallagherbassett.com/" target="_blank">
 					<div class="linkbox GB">
 					</div>
 				</a>
 				<p> DEVELOPMENT </p>
 			</div>
 			<div class="col-md-4">
-				<a href="https://newsroom.expedia.com/" target="_black">
+				<a href="https://newsroom.expedia.com/" target="_blank">
 					<div class="linkbox expedia">
 					</div>
 				</a>
 				<p> DEVELOPMENT </p>
 			</div>
 			<div class="col-md-4">
-				<a href="https://www.legacyplace.com/" target="_black">
+				<a href="https://www.legacyplace.com/" target="_blank">
 					<div class="linkbox legacy">
 					</div>
 				</a>
 				<p> DEVELOPMENT </p>
 			</div>
 			<div class="col-md-4">
-				<a href="https://www.shopashevilleoutlets.com/" target="_black">
+				<a href="https://www.shopashevilleoutlets.com/" target="_blank">
 					<div class="linkbox ashville">
 					</div>
 				</a>
 				<p> DEVELOPMENT </p>
 			</div>
 			<div class="col-md-4">
-				<a href="https://www.verobeachoutlets.com" target="_black">
+				<a href="https://www.verobeachoutlets.com" target="_blank">
 					<div class="linkbox vero">
 					</div>
 				</a>
