--- a/update/index.html
+++ b/update/index.html
@@ -32,53 +32,57 @@
 			<div class="container">
 				
 				<div class="col-md-4">
-					<div class="bubble">
-						<p>DEVELOPMENT</p>
-						<div class="module lifetime">
+					<a href="http://news.lifetime.life/" target="_blank">
+						<div class="bubble">
+							<p>DEVELOPMENT</p>
+							<div class="module lifetime"></div>
 						</div>
-					</div>
+					</a>
 				</div>
 
 				<div class="col-md-4">
-					<div class="bubble">
-						<p>DEVELOPMENT</p>
-						<div class="module expedia">
+					<a href="https://newsroom.expedia.com/" target="_blank">
+						<div class="bubble">
+							<p>DEVELOPMENT</p>
+							<div class="module expedia"></div>
 						</div>
-					</div>
+					</a>
 				</div>
 
 				<div class="col-md-4">
-					<div class="bubble">
-						<p>DEVELOPMENT</p>
-						<div class="module achieve">
+					<a href="http://ir.achievelifesciences.com/" target="_blank">
+						<div class="bubble">
+							<p>DEVELOPMENT</p>
+							<div class="module achieve"></div>
 						</div>
-					</div>
+					</a>
 				</div>
 			
 				<div class="col-md-4">
-					<div class="bubble">
-						<p>DEVELOPMENT</p>
-						<div class="module legacy">
+					<a href="https://www.legacyplace.com/" target="_blank">
+						<div class="bubble">
+							<p>DEVELOPMENT</p>
+							<div class="module legacy"></div>
 						</div>
-					</div>
+					</a>
 				</div>
 
 				<div class="col-md-4">
-					<div class="bubble">
-						<p>DEVELOPMENT</p>
-						<div class="module ashville">
+					<a href="https://www.shopashevilleoutlets.com/" target="_blank">
+						<div class="bubble">
+							<p>DEVELOPMENT</p>
+							<div class="module ashville"></div>
 						</div>
-					</div>
+					</a>
 				</div>
 
 				<div class="col-md-4">
-					<div class="bubble both">
-						<p>DESIGN + <br> DEVELOPMENT</p>
-						<a href="#">
-							<div class="module ei">
-							</div>
-						</a>
-					</div>
+					<a href="http://enviroinvestigators.com/" target="_blank">
+						<div class="bubble both">
+							<p>DESIGN + <br> DEVELOPMENT</p>
+							<div class="module ei"></div>
+						</div>
+					</a>
 				</div>
 
 			</div>
