--- a/update/index.html
+++ b/update/index.html
@@ -20,7 +20,7 @@
 <body>
 	<div class="main">
 		<header>
-			<div class="topbanner black">
+			<div class="topbanner">
 				<div class="container">
 					<h1>Hi, I'm Noel Killebrew <br>
 						I specialize in Website Design + Front-End Web Development</h1>
