--- a/update/index.html
+++ b/update/index.html
@@ -28,7 +28,7 @@
 			</div>
 		</header>
 
-		<section class="black portfolio">
+		<section class="portfolio">
 			<div class="container">
 				
 				<div class="col-md-4">
@@ -102,7 +102,10 @@
 		</section>
 
 		<section>
-			
+			<div class="current">
+				<div class="container">
+				</div>
+			</div>
 		</section>
 
 		<footer>
