ready for go live

--- a/update/index.html
+++ b/update/index.html
@@ -88,35 +88,61 @@
 			</div>
 		</section>
 
-		<section>
+		<section class="feature">
 			<div class="featured-content">
 				<div class="container">
-					<h2>Featured Work</h2>
-					<p>This was a unique opportunity to capture business. The client was using a competitor's services because they believed that while our company offered a better product, we were only able to provide antiquated design. Since this was not a current, paying client, this was not a design project that could be incorporated into the design team's workflow. I had the opportunity to sketch up and build out this design for the sales team to present in hopes of winning the business. It worked, the client was captivated and made the switch right away.</p>
+					<div class="col-md-6">
+						<h2>Featured Work</h2>
+						<p>This was a unique opportunity to capture business. The client was using a competitor's services because they believed that while our company offered a better product, we were only able to provide antiquated design. Since this was not a current, paying client, this was not a design project that could be incorporated into the design team's workflow. I had the opportunity to sketch up and build out this design for the sales team to present in hopes of winning the business. It worked, the client was captivated and made the switch right away.</p>
 
-					<p>My favorite part of this process was the client's diagonal design element. On their website it only exists as part of the flat, banner images. I was able to bring it to life and make it responsive using CSS. My CSS diagonal changes direction from horizontal to vertical for mobile display.</p>
+						<p>My favorite part of this process was the client's diagonal design element. On their website it only exists as part of the flat, banner images. I was able to bring it to life and make it responsive using CSS. My CSS diagonal changes direction from horizontal to vertical for mobile display.</p>
 
-					<button><a href="http://news.centurylink.com/" target="_blank">View Live Site</a></button>
+						<button><a href="http://news.centurylink.com/" target="_blank">View Live Site</a></button>
+					</div>
+					<div class="col-md-6">
+						<img src="images/devices.jpg" alt="design and development centurylink responsive">
+					</div>
 				</div>
 			</div>
 		</section>
 
-		<section>
+		<section class="currently">
 			<div class="current">
 				<div class="container">
+					<h2> CURRENTLY AROUND THE WEB </h2>
+
+					<div class="col-md-6">
+						<a class="twitter-timeline"  href="https://twitter.com/noelieTREX" data-widget-id="311206569213837313">Tweets by @noelieTREX</a>
+            			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+					</div>
+
+					<div class="col-md-6">
+						  <div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/KvhEJ-il1v5-GzcXrsI_3Q/170395055871" data-did="862e0a967b19fa98597f8212cc6a0aa71ea9be83"><a href="http://noelietrex.tumblr.com/post/170395055871/2018-frameworks-baby">http://noelietrex.tumblr.com/post/170395055871/2018-frameworks-baby</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
+					</div>
+
+					<div class="marg col-md-12">
+						<p data-height="395" data-theme-id="0" data-slug-hash="GJmXoK" data-default-tab="result" data-user="noelietrex" data-embed-version="2" data-pen-title="GJmXoK" class="codepen">See the Pen <a href="https://codepen.io/noelietrex/pen/GJmXoK/">GJmXoK</a> by Noel Killebrew (<a href="https://codepen.io/noelietrex">@noelietrex</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+						<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+					</div>
 				</div>
 			</div>
 		</section>
 
 		<footer>
 			<div class="container">
-				<div class="social-wrapper">
-					<ul class="social-tabs" role="tablist">
-					    <a href="https://github.com/noelietrex" target="_blank"><li class="social-tab github" title="Github" role="tab" ></li></a>  
-					    <a href="https://codepen.io/noelietrex/" target="_blank"><li class="social-tab codepin" title="Codepin" role="tab" ></li></a>
-					    <a href="https://twitter.com/noelieTREX" target="_blank"><li class="social-tab twitter" title="Twitter" role="tab" ></li></a>
-					    <a href="http://noelietrex.tumblr.com/" target="_blank"><li class="social-tab tumblr" title="Tumblr" role="tab" ></li></a>
-					</ul>     
+				<div class="col-md-12">
+					<button><a href="images/resume.pdf" target="_blank">Download Resume</a></button>
+				</div>
+		
+				<div class="col-md-12">
+					<div class="social-wrapper">
+						<ul class="social-tabs" role="tablist">
+						    <a href="https://github.com/noelietrex" target="_blank"><li class="social-tab github" title="Github" role="tab" ></li></a>  
+						    <a href="https://codepen.io/noelietrex/" target="_blank"><li class="social-tab codepin" title="Codepin" role="tab" ></li></a>
+						    <a href="https://twitter.com/noelieTREX" target="_blank"><li class="social-tab twitter" title="Twitter" role="tab" ></li></a>
+						    <a href="http://noelietrex.tumblr.com/" target="_blank"><li class="social-tab tumblr" title="Tumblr" role="tab" ></li></a>
+						</ul>     
+					</div>
 				</div>
 			</div>
 		</footer>
