--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
 	<title>Noel Killebrew Design + Development</title>
 	<meta name="description" content="Hi, I'm Noel Killebrew, a designer and developer based in Denver, Colorado. With a background in design and years of experience in front-end web development, I have a passion for the space where functional meets elegant.">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="shortcut icon" href="images/favicon.ico">
 
