bubble hover info update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="col-md-4">
 					<a href="http://news.lifetime.life/" target="_blank">
 						<div class="bubble">
-							<p>DEVELOPMENT</p>
+							<p>Lifetime Fitness News<br> DEVELOPMENT</p>
 							<div class="module lifetime"></div>
 						</div>
 					</a>
@@ -45,7 +45,7 @@
 				<div class="col-md-4">
 					<a href="https://newsroom.expedia.com/" target="_blank">
 						<div class="bubble">
-							<p>DEVELOPMENT</p>
+							<p>Expedia News Room <br> DEVELOPMENT</p>
 							<div class="module expedia"></div>
 						</div>
 					</a>
@@ -53,8 +53,8 @@
 
 				<div class="col-md-4">
 					<a href="http://ir.achievelifesciences.com/" target="_blank">
-						<div class="bubble">
-							<p>DEVELOPMENT</p>
+						<div class="bubble both">
+							<p>Achieve Life Sciences <br> Investor Room <br> DEVELOPMENT</p>
 							<div class="module achieve"></div>
 						</div>
 					</a>
@@ -63,7 +63,7 @@
 				<div class="col-md-4">
 					<a href="https://www.legacyplace.com/" target="_blank">
 						<div class="bubble">
-							<p>DEVELOPMENT</p>
+							<p>Legacy Place Mall <br> DEVELOPMENT</p>
 							<div class="module legacy"></div>
 						</div>
 					</a>
@@ -72,7 +72,7 @@
 				<div class="col-md-4">
 					<a href="https://www.shopashevilleoutlets.com/" target="_blank">
 						<div class="bubble">
-							<p>DEVELOPMENT</p>
+							<p>Ashville Outlet Mall <br> DEVELOPMENT</p>
 							<div class="module ashville"></div>
 						</div>
 					</a>
@@ -81,7 +81,7 @@
 				<div class="col-md-4">
 					<a href="http://enviroinvestigators.com/" target="_blank">
 						<div class="bubble both">
-							<p>DESIGN + <br> DEVELOPMENT</p>
+							<p>Enviro Investigators <br> DESIGN + <br> DEVELOPMENT</p>
 							<div class="module ei"></div>
 						</div>
 					</a>
