I think I'm going to stop hyphinating FRONT END

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="topbanner">
 				<div class="container">
 					<h1>Hi, I'm Noel Killebrew <br>
-						I specialize in Website Design + Front-End Web Development</h1>
+						I specialize in Website Design + Front End Web Development</h1>
 				</div>
 			</div>
 		</header>
