Replacing legacy with ipf

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 				</div>
 			
 				<div class="col-md-4">
-					<a href="https://www.legacyplace.com/" target="_blank">
+					<a href="https://noelietrex.github.io/IPF/index.html" target="_blank">
 						<div class="bubble">
-							<p>Legacy Place Mall <br> DEVELOPMENT</p>
-							<div class="module legacy"></div>
+							<p>IPF Genetic Study <br> DESiGN + <br> DEVELOPMENT</p>
+							<div class="module ipf"></div>
 						</div>
 					</a>
 				</div>
