--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		<footer>
 			<div class="container">
 				<div class="col-md-12">
-					<button><a href="images/resume.pdf" target="_blank">Download Resume</a></button>
+					<!-- <button><a href="images/resume.pdf" target="_blank">Download Resume</a></button> -->
 				</div>
 		
 				<div class="col-md-12">
